# convolutions

./: .gitignore  LICENSE  README.md
convolutions_videoanim/convolutions_videoanim/: ContentView.swift  convolutions_videoanimApp.swift
convolutions_videoanim/convolutions_videoanim.xcodeproj/: project.pbxproj
convolutions_videoanim/convolutions_videoanim.xcodeproj/project.xcworkspace/xcuserdata/jakelanders.xcuserdatad/: UserInterfaceState.xcuserstate
convolutions_videoanim/convolutions_videoanim.xcodeproj/xcuserdata/jakelanders.xcuserdatad/xcschemes/: xcschememanagement.plist
convolutions_videoanim/convolutions_videoanim/Assets.xcassets/3b1b-whatisaconv.imageset/: Contents.json
convolutions_videoanim/convolutions_videoanim/Assets.xcassets/convolution.imageset/: Contents.json
convolutions_videoanim/convolutions_videoanim/Assets.xcassets/dft.imageset/: Contents.json
convolutions_videoanim/convolutions_videoanim/src/: Conv1D.swift  Conv2D.swift  Formula.swift  Model.swift  Pooling.swift  Thumbnail.swift  VideoPreview.swift  convolutions_videoanim-Bridging-Header.h  dot.c  dot.h
python-convolutions/: convert_img.py  dft.py  image_manip.ipynb
rust-convolutions/: Cargo.toml
rust-convolutions/src/: convolve.rs  dft.rs  error.rs  kernel.rs  main.rs  padding.rs  pooling-t.rs  pooling.rs  prelude.rs
