[package]
name = "convolutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
image = "0.24.5"
num = "0.4.0"
rand = "0.8.5"
rustfft = "6.1.0"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
